# fs-scanner

./: .gitignore  .scannerignore.default  README.md  pyproject.toml
docs/: proposal-windows-support.md
src/fs_scanner/: __init__.py  __main__.py  cli.py  config.py  progress.py
src/fs_scanner/catalog/: __init__.py  categorizer.py  models.py
src/fs_scanner/dashboard/: __init__.py  generator.py
src/fs_scanner/platform/: __init__.py  base.py  macos.py
src/fs_scanner/reporters/: __init__.py  comparison.py  html_report.py  json_report.py  terminal.py
src/fs_scanner/scanner/: __init__.py  exclusions.py  metadata.py  walker.py
src/fs_scanner/suggestions/: __init__.py  app_leftovers.py  cache_rules.py  git_repos.py  homebrew.py  icloud.py  mail.py  timemachine.py  xcode.py
tests/: test_determinism.py  test_git_repos.py  test_no_network.py  test_suggestions_run.py
