[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fs-scanner"
version = "0.1.0"
description = "A deterministic, read-only CLI tool for macOS that scans the filesystem, catalogs files, and suggests deletable temporary/cache files."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "fs-scanner contributors"}
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
    "ruff>=0.1",
]

[project.scripts]
fs-scanner = "fs_scanner.cli:scan"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fs_scanner = ["dashboard/assets/*.js"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
